[workspace]
members = [
	"nimbus-consensus",
	"nimbus-primitives",
	"pallets/aura-style-filter",
	"pallets/author-inherent",
	"pallets/author-slot-filter",
	"parachain-template/node",
	"parachain-template/runtime",
]

[profile.release]
panic = "unwind"


# [patch."https://github.com/purestake/polkadot"]
# polkadot = { path = "../polkadot" }
# polkadot-cli = { path = "../polkadot/cli" }
# polkadot-core-primitives = { path = "../polkadot/core-primitives" }
# polkadot-node-collation-generation = { path = "../polkadot/node/collation-generation" }
# tracing-gum = { path = "../polkadot/node/gum" }
# tracing-gum-proc-macro = { path = "../polkadot/node/gum/proc-macro" }
# polkadot-overseer = { path = "../polkadot/node/overseer" }
# polkadot-node-subsystem-util = { path = "../polkadot/node/subsystem-util" }
# polkadot-node-jaeger = { path = "../polkadot/node/jaeger" }
# polkadot-test-malus = { path = "../polkadot/node/malus" }
# polkadot-node-metrics = { path = "../polkadot/node/metrics" }
# zombienet-backchannel = { path = "../polkadot/node/zombienet-backchannel" }
# polkadot-node-subsystem = { path = "../polkadot/node/subsystem" }
# polkadot-service = { path = "../polkadot/node/service" }
# polkadot-performance-test = { path = "../polkadot/node/test/performance-test" }
# polkadot-test-service = { path = "../polkadot/node/test/service" }
# polkadot-test-client = { path = "../polkadot/node/test/client" }
# polkadot-node-core-pvf = { path = "../polkadot/node/core/pvf" }
# polkadot-node-core-runtime-api = { path = "../polkadot/node/core/runtime-api" }
# polkadot-node-core-av-store = { path = "../polkadot/node/core/av-store" }
# polkadot-node-core-candidate-validation = { path = "../polkadot/node/core/candidate-validation" }
# polkadot-node-core-approval-voting = { path = "../polkadot/node/core/approval-voting" }
# polkadot-node-core-backing = { path = "../polkadot/node/core/backing" }
# polkadot-node-core-provisioner = { path = "../polkadot/node/core/provisioner" }
# polkadot-node-core-chain-selection = { path = "../polkadot/node/core/chain-selection" }
# polkadot-node-core-dispute-coordinator = { path = "../polkadot/node/core/dispute-coordinator" }
# polkadot-node-core-parachains-inherent = { path = "../polkadot/node/core/parachains-inherent" }
# polkadot-node-core-bitfield-signing = { path = "../polkadot/node/core/bitfield-signing" }
# polkadot-node-core-chain-api = { path = "../polkadot/node/core/chain-api" }
# polkadot-node-core-pvf-checker = { path = "../polkadot/node/core/pvf-checker" }
# polkadot-node-primitives = { path = "../polkadot/node/primitives" }
# polkadot-client = { path = "../polkadot/node/client" }
# polkadot-node-subsystem-types = { path = "../polkadot/node/subsystem-types" }
# polkadot-node-subsystem-test-helpers = { path = "../polkadot/node/subsystem-test-helpers" }
# polkadot-approval-distribution = { path = "../polkadot/node/network/approval-distribution" }
# polkadot-collator-protocol = { path = "../polkadot/node/network/collator-protocol" }
# polkadot-dispute-distribution = { path = "../polkadot/node/network/dispute-distribution" }
# polkadot-availability-distribution = { path = "../polkadot/node/network/availability-distribution" }
# polkadot-node-network-protocol = { path = "../polkadot/node/network/protocol" }
# polkadot-availability-bitfield-distribution = { path = "../polkadot/node/network/bitfield-distribution" }
# polkadot-statement-distribution = { path = "../polkadot/node/network/statement-distribution" }
# polkadot-network-bridge = { path = "../polkadot/node/network/bridge" }
# polkadot-gossip-support = { path = "../polkadot/node/network/gossip-support" }
# polkadot-availability-recovery = { path = "../polkadot/node/network/availability-recovery" }
# polkadot-parachain = { path = "../polkadot/parachain" }
# test-parachains = { path = "../polkadot/parachain/test-parachains" }
# test-parachain-adder = { path = "../polkadot/parachain/test-parachains/adder" }
# test-parachain-adder-collator = { path = "../polkadot/parachain/test-parachains/adder/collator" }
# test-parachain-undying = { path = "../polkadot/parachain/test-parachains/undying" }
# test-parachain-undying-collator = { path = "../polkadot/parachain/test-parachains/undying/collator" }
# test-parachain-halt = { path = "../polkadot/parachain/test-parachains/halt" }
# polkadot-statement-table = { path = "../polkadot/statement-table" }
# polkadot-rpc = { path = "../polkadot/rpc" }
# kusama-runtime = { path = "../polkadot/runtime/kusama" }
# kusama-runtime-constants = { path = "../polkadot/runtime/kusama/constants" }
# polkadot-test-runtime = { path = "../polkadot/runtime/test-runtime" }
# test-runtime-constants = { path = "../polkadot/runtime/test-runtime/constants" }
# polkadot-runtime-parachains = { path = "../polkadot/runtime/parachains" }
# polkadot-runtime-metrics = { path = "../polkadot/runtime/metrics" }
# westend-runtime = { path = "../polkadot/runtime/westend" }
# westend-runtime-constants = { path = "../polkadot/runtime/westend/constants" }
# polkadot-runtime = { path = "../polkadot/runtime/polkadot" }
# polkadot-runtime-constants = { path = "../polkadot/runtime/polkadot/constants" }
# rococo-runtime = { path = "../polkadot/runtime/rococo" }
# rococo-runtime-constants = { path = "../polkadot/runtime/rococo/constants" }
# polkadot-runtime-common = { path = "../polkadot/runtime/common" }
# slot-range-helper = { path = "../polkadot/runtime/common/slot_range_helper" }
# polkadot-erasure-coding = { path = "../polkadot/erasure-coding" }
# # erasure_coding_fuzzer = { path = "../polkadot/erasure-coding/fuzzer" }
# polkadot-primitives = { path = "../polkadot/primitives" }
# polkadot-primitives-test-helpers = { path = "../polkadot/primitives/test-helpers" }
# xcm = { path = "../polkadot/xcm" }
# xcm-builder = { path = "../polkadot/xcm/xcm-builder" }
# xcm-simulator = { path = "../polkadot/xcm/xcm-simulator" }
# xcm-simulator-example = { path = "../polkadot/xcm/xcm-simulator/example" }
# xcm-simulator-fuzzer = { path = "../polkadot/xcm/xcm-simulator/fuzzer" }
# xcm-executor = { path = "../polkadot/xcm/xcm-executor" }
# xcm-executor-integration-tests = { path = "../polkadot/xcm/xcm-executor/integration-tests" }
# xcm-procedural = { path = "../polkadot/xcm/procedural" }
# pallet-xcm-benchmarks = { path = "../polkadot/xcm/pallet-xcm-benchmarks" }
# pallet-xcm = { path = "../polkadot/xcm/pallet-xcm" }
# staking-miner = { path = "../polkadot/utils/staking-miner" }
# remote-ext-tests-bags-list = { path = "../polkadot/utils/remote-ext-tests/bags-list" }
# polkadot-voter-bags = { path = "../polkadot/utils/generate-bags" }
