[package]
name = "nimbus-consensus"
description = "Client-side worker for the Nimbus family of consensus algorithms"
edition = "2021"
version = "0.9.0"
[dependencies]
# Substrate deps
sc-client-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-consensus = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-consensus-manual-seal = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-application-crypto = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-consensus = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-core = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-inherents = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
substrate-prometheus-endpoint = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

# Polkadot dependencies
polkadot-client = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "moonbeam-polkadot-v0.9.40" }

# Cumulus dependencies
cumulus-client-consensus-common = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-primitives-core = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }

# Nimbus Dependencies
nimbus-primitives = { path = "../nimbus-primitives" }

# Other deps
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
futures = { version = "0.3.24", features = [ "compat" ] }
log = "0.4.17"
parking_lot = "0.12"
tracing = "0.1.22"
