[package]
name = "nimbus-primitives"
authors = [ "PureStake" ]
description = "Primitive types and traits used in the Nimbus consensus framework"
edition = "2021"
version = "0.9.0"

[dependencies]
async-trait = { version = "0.1", optional = true }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }

frame-support = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-system = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
scale-info = { version = "2.0.0", default-features = false, features = [ "derive" ] }
sp-api = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-application-crypto = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-inherents = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-runtime = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-std = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

frame-benchmarking = { git = "https://github.com/PureStake/substrate", optional = true, default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks"
]
