[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-aura-style-filter"
description = "The Aura (authority round) consensus engine implemented in the Nimbus framework"
version = "0.9.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "serde",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "nimbus-primitives/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
]
