[package]
name = "pallet-aura-style-filter"
authors = [ "PureStake" ]
description = "The Aura (authority round) consensus engine implemented in the Nimbus framework"
edition = "2021"
version = "0.9.0"

[dependencies]
frame-support = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.31" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.31" }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0.0", default-features = false, features = [ "derive" ] }
serde = { version = "1.0.101", optional = true, features = [ "derive" ] }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.31" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.31" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
