[package]
name = "pallet-author-inherent"
authors = [ "PureStake" ]
description = "This pallet is the core of the in-runtime portion of Nimbus."
edition = "2021"
license = "GPL-3.0-only"
version = "0.9.0"

[dependencies]
frame-support = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-system = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
log = { version = "0.4.17", default-features = false }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0.0", default-features = false, features = [ "derive" ] }
sp-api = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-application-crypto = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-authorship = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-inherents = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-runtime = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-std = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

# Benchmarks
frame-benchmarking = { git = "https://github.com/PureStake/substrate", optional = true, default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

[dev-dependencies]
sp-core = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-io = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-support-test = { version = "3.0.0", git = "https://github.com/PureStake/substrate", branch = "notlesh-add-digest-to-benchmark-overhead" }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-authorship/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"nimbus-primitives/runtime-benchmarks",
]

