[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-slot-filter"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-sig-para" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-sig-para" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-sig-para" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para", default-features = false }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"log/std",
  "serde",
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "nimbus-primitives/std",
  "scale-info/std",
]
