[package]
name = "parachain-template-node"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Nimbus consensus framework with instant seal and as a parachain."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.9", features = [ "derive" ] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
derive_more = "0.99.2"
flume = "0.10.9"
hex-literal = "0.3.1"
log = "0.4.17"
serde = { version = "1.0.119", features = [ "derive" ] }

# RPC related Dependencies
jsonrpsee = { version = "0.15.0", features = [ "macros", "server" ] }

# Local Dependencies
nimbus-consensus = { path = "../../nimbus-consensus" }
nimbus-primitives = { path = "../../nimbus-primitives" }
parachain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-service = { git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] , branch = "polkadot-v0.9.32" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
#sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
runtime-benchmarks = [ "parachain-template-runtime/runtime-benchmarks" ]
try-runtime = [ "parachain-template-runtime/try-runtime" ]
